[project]
name = "voy"
version = "0.0.1"
description = "A CLI for following arXiv authors."
readme = "README.md"
authors = [{ name = "Florin Gogianu", email = "florin.gogianu@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "arxiv"]
dependencies = [
    "arxiv~=2.1.0",
    "colorful~=0.5.6",
    "datargs~=1.1.0",
    "jsonlines~=4.0.0",
    "platformdirs~=4.1.0",
    "xxhash~=3.4.1",
    # "windows-curses==2.3.2; sys_platform == 'win32'"
]
requires-python = ">=3.12.0"


[project.scripts]
voy = "voy.cmd:voy"


[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"
