[project]
name = "voy"
version = "0.2.0"
description = "A CLI for following arXiv authors."
readme = "README.md"
authors = [{ name = "Florin Gogianu", email = "florin.gogianu@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["arxiv", "feed"]
dependencies = [
    "arxiv==2.2.0",
    "colorful>=0.5.7",
    "datargs>=1.1.0",
    "jsonlines>=4.0.0",
    "platformdirs>=4.3.8",
    "xxhash>=3.5.0",
    "windows-curses>=2.4.1; sys_platform == 'win32'",
]
requires-python = ">=3.12.0"


[project.urls]
Homepage = "https://github.com/floringogianu/voy"


[project.scripts]
voy = "voy.cmd:voy"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "commitizen>=4.6.0",
    "pre-commit>=4.2.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
